// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "children": [
    {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    {
      "name": "Option B",
      "role": "menuitem",
    },
    {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "name": "Some label. Some message",
  "role": "combobox",
  "value": "Option A",
}
`;

exports[`accessibility should update accessibility tree with message text if state changes programmatically: Of Message when state = error 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should update accessibility tree with message text if state changes programmatically: Of Message when state = success 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some success message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`accessibility should update accessibility tree with message text if state changes programmatically: Of Select when state = error 1`] = `
{
  "children": [
    {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    {
      "name": "Option B",
      "role": "menuitem",
    },
    {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "combobox",
  "value": "Option A",
}
`;

exports[`accessibility should update accessibility tree with message text if state changes programmatically: Of Select when state = none 1`] = `
{
  "children": [
    {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    {
      "name": "Option B",
      "role": "menuitem",
    },
    {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "name": "Some label. Some description",
  "role": "combobox",
  "value": "Option A",
}
`;

exports[`accessibility should update accessibility tree with message text if state changes programmatically: Of Select when state = success 1`] = `
{
  "children": [
    {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    {
      "name": "Option B",
      "role": "menuitem",
    },
    {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "name": "Some label. Some success message.",
  "role": "combobox",
  "value": "Option A",
}
`;
